@@ -54,6 +54,7 @@ Task* Task::factory( const string& t ){
   else if( type == "zoomify" ) return new Zoomify;
   else if( type == "spectra" ) return new SPECTRA;
   else if( type == "lyr" ) return new LYR;
+  else if( type == "deepzoom" ) return new DeepZoom;
   else return NULL;
 
 }
